--- a/chat.cbp
+++ b/chat.cbp
@@ -13,7 +13,18 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-I/usr/local/lib/wx/include/gtk3-unicode-3.2 -I/usr/local/include/wx-3.2 -D_FILE_OFFSET_BITS=64 -DWXUSINGDLL -D__WXGTK__ -pthread" />
 				</Compiler>
+				<Linker>
+					<Add library="wx_baseu-3.2" />
+					<Add library="wx_baseu_net-3.2" />
+					<Add library="wx_baseu_xml-3.2" />
+					<Add library="wx_gtk3u_core-3.2" />
+					<Add library="wx_gtk3u_html-3.2" />
+					<Add library="wx_gtk3u_xrc-3.2" />
+					<Add library="wx_gtk3u_qa-3.2" />
+					<Add library="wx_gtk3u_richtext-3.2" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/chat" prefix_auto="1" extension_auto="1" />
